# $Id: Changes,v 1.99 2004/01/02 03:59:19 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.71_03
	[INTERNALS]
	* Made the globbing in Makefile.PL a little less command-line
	  intensive.  Also fixed the missing files in MANIFEST.

0.71_02 Mon Dec 22 14:29:13 CST 2003
	[THINGS THAT MAY BREAK YOUR CODE]
	* Added a 5th, optional parameter to WWW::Mechanize::Link's
	  constructor.	In 0.71_01, it was at the beginning of the
	  argument list and was required.  Now it's at the end and is
	  optional.  If, in the 15 hours since 0.71_01 came out, you
	  went and changed all your WWW::Mechanize::Link constructors,
	  you'll have to change them around again.  Otherwise, you can
	  just ignore this change.

0.71_01 Sun Dec 21 23:48:12 CST 2003
	[THINGS THAT MAY BREAK YOUR CODE]
	* WWW::Mechanize::Link's constructor has a new argument
	  that needs to be passed in, at the start of the argument
	  list.

	[ENHANCEMENTS]
	* WWW::Mechanize::Link object now takes a $base URL, and will
	  return absolute URLs with the url_abs() method.  Thanks to
	  Ashley Pond.
	* Added another script to WWW::Mechanize::Examples.  It's a
	  script that didn't make it into Spidering Hacks.

	[INSTALL & TESTS]
	* Heavy use of the new Test::Memory::Cycle module.
	* Fixed Makefile.PL so that the tests are selected under Win32.
	* Changed t/mech-dump.t so that the test succeeds under Win32.
	* Updated t/referer.t and t/mech-dump.t so they run under VMS.
	  Thanks to Peter Prymmer.


0.70	Sun Nov 30 23:45:27 CST 2003
	[THINGS THAT MAY BREAK YOUR CODE]
	* Redirects are now handled better by LWP, so the code that
	  changes POSTs to GETs on redirects has been removed.

	[FIXES]
	* Fixed redirect_ok(), which had its API changed out from under
	  it in LWP 5.76.

	[ENHANCEMENTS]
	* New warnings in find_link() for strings that are space padded,
	  and for text matches that are passed a regex.  Thanks to
	  Jim Cromie.

	[DOCUMENTATION]
	* Patches from Mark Stosberg and Jim Cromie.
